--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>Frontend Mentor | Four card feature section</title>
+  <title>Four card feature section</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -18,7 +18,9 @@
     </style>
 </head>
 <body>
-  
+  <main>
+    
+  </main>
   Reliable, efficient delivery
   Powered by Technology
 
@@ -41,7 +43,7 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Carlos Damian</a>.
     </p>
   </footer>
 </body>
