--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-<link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./index.css" />
     <title>Four card feature section</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -30,25 +30,76 @@
   </head>
   <body>
     <main>
-      <h1 class="header">Reliable, efficient delivery</h1>
-      <h2 class="header-subtitle">Powered by Technology</h2>
-      <h3 class="header-pharapgrah">
-        Our Artificial Intelligence powered tools use millions of project data
-        points to ensure that your project is successful
-      </h3>
+      <div class="header-container">
+        <h1 class="header">Reliable, efficient delivery</h1>
+        <h2 class="header-subtitle">Powered by Technology</h2>
+        <h3 class="header-pharapgrah">
+          Our Artificial Intelligence powered tools use millions of project data
+          points to ensure that your project is successful
+        </h3>
+      </div>
+      <div class="bottom-container">
+        <div class="left">
+          <div class="card-container cyan">
+            <h1 class="card-header">Supervisor</h1>
+            <span class="card-subtitle"
+              >Monitors activity to identify project roadblocks</span
+            >
+            <img
+              class="card-img"
+              src="./images/icon-supervisor.svg"
+              alt="supervisor"
+            />
+          </div>
+        </div>
+        <div class="middle">
+          <div class="card-container red">
+            <h1 class="card-header">Team Builder</h1>
+            <span class="card-subtitle"
+              >Scans our talent network to create the optimal team for your
+              project</span
+            >
+            <img
+              class="card-img"
+              src="./images/icon-team-builder.svg"
+              alt="supervisor"
+            />
+          </div>
+          <div class="card-container yellow">
+            <h1 class="card-header">Karma</h1>
+            <span class="card-subtitle"
+              > Karma Regularly evaluates our talent to ensure quality </span
+            >
+            <img
+              class="card-img"
+              src="./images/icon-karma.svg"
+              alt="supervisor"
+            />
+          </div>
+        </div>
+        <div class="right"> <div class="card-container blue">
+          <h1 class="card-header">Calculator</h1>
+          <span class="card-subtitle"
+            >Uses data from past projects to provide better delivery estimates</span
+          >
+          <img
+            class="card-img"
+            src="./images/icon-calculator.svg"
+            alt="supervisor"
+          />
+        </div></div>
+      </div>
     </main>
 
-    Supervisor Monitors activity to identify project roadblocks Team Builder
-    Scans our talent network to create the optimal team for your project Karma
-    Regularly evaluates our talent to ensure quality Calculator Uses data from
-    past projects to provide better delivery estimates
+     
+    
 
     <footer>
       <p class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Carlos Damian</a>.
+        >. Coded by <a href="https://carlosdamian.netlify.app/" target="_blank">Carlos Damian</a>.
       </p>
     </footer>
   </body>
